--- a/fnd-wasabi/bower.json
+++ b/fnd-wasabi/bower.json
@@ -29,6 +29,7 @@
     "angular-route": "~1.4.3",
     "angular-socket-io": "~0.7.0",
     "angular-swiper": "*",
+    "angular-touch": "~1.3.16",
     "angularjs-datepicker": "~0.2.5",
     "d3": "~3.5.9",
     "foundation-apps": "~1.1.0",
@@ -36,7 +37,8 @@
     "lodash": "~3.9.3",
     "ng-device-detector": "~1.1.7",
     "ngdatepicker": "~1.3.5",
-    "nvd3": "~1.8.1"
+    "nvd3": "~1.8.1",
+    "font-awesome-sass": "~4.3.1"
   },
   "resolutions": {
     "angular": "~1.4.3"
