--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "errorhandler": "^1.1.1",
     "foundation-apps": "^1.1.0",
     "helmet": "^0.9.1",
+    "mongodb": "^2.0.48",
     "lodash": "^3.9.3",
     "loopback": "^2.14.0",
     "loopback-boot": "^2.6.5",
