--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "slc-wasabi",
-  "version": "1.0.0",
+  "version": "0.0.1",
   "main": "server/server.js",
   "scripts": {
     "pretest": "jshint ."
@@ -12,21 +12,22 @@
     "cors": "^2.5.2",
     "errorhandler": "^1.1.1",
     "foundation-apps": "^1.1.0",
-    "helmet": "^0.9.1",
-    "mongodb": "^2.0.48",
-    "lodash": "^3.9.3",
+    "helmet": "^1.3.0",
+    "kerberos": "0.0.18",
+    "lodash": "^4.6.1",
     "loopback": "^2.14.0",
     "loopback-boot": "^2.6.5",
     "loopback-connector-mongodb": "^1.8.0",
     "loopback-datasource-juggler": "^2.19.0",
-    "opencv": "^3.2.0",
+    "mongodb": "^2.0.48",
+    "opencv": "^5.0.0",
     "q": "^1.4.1",
     "serve-favicon": "^2.0.1",
     "socket.io": "^1.3.5",
     "socket.io-client": "^1.3.5"
   },
   "optionalDependencies": {
-    "loopback-explorer": "^1.1.0"
+    "loopback-component-explorer": "^2.0.2"
   },
   "devDependencies": {
     "jshint": "^2.5.6"
