--- a/fnd-wasabi/package.json
+++ b/fnd-wasabi/package.json
@@ -5,6 +5,7 @@
     "start": "gulp"
   },
   "devDependencies": {
+    "bower": "^1.7.7",
     "front-router": "^1.0.0",
     "gulp": "^3.8.10",
     "gulp-autoprefixer": "^3.1.0",
@@ -21,7 +22,9 @@
     "protractor": "^3.1.1",
     "rimraf": "^2.2.8",
     "run-sequence": "^1.0.2",
-    "yargs": "^4.2.0"
+    "yargs": "^4.2.0",
+    "node-sass": "^3.4.2",
+    "lodash": "^4.6.1"
   },
   "private": true
 }
